<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp" app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints"
        android:focusable="true">

        <TextView
            android:id="@+id/tv_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/_1"
            android:textColor="#01579B"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="MissingConstraints,TextContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_rank"
            android:layout_toStartOf="@+id/tv_rank"
            android:text="@string/sharp"
            android:textColor="#3949AB"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="MissingConstraints,TextContrastCheck" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/_2016"
            android:textColor="#727272"
            android:textSize="16sp"
            tools:ignore="MissingConstraints,TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/tv_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_song_name"
            android:layout_alignParentStart="true"
            android:text="@string/author"
            android:textColor="#0D47A1"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            tools:ignore="MissingConstraints,TextContrastCheck" />

        <ImageView
            android:id="@+id/iv_album_cover"
            android:layout_width="410dp"
            android:layout_height="221dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:scaleType="centerCrop"
            android:src="@drawable/rem"
            tools:ignore="MissingConstraints"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/tv_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_album_cover"
            android:gravity="center"
            android:text="@string/name_manga"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints,TextContrastCheck" />
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="3dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>